RESOLVED FIXED 280442
Fix infinite loops when parsing invalid CSP header fields after 273894@main
https://bugs.webkit.org/show_bug.cgi?id=280442
Summary Fix infinite loops when parsing invalid CSP header fields after 273894@main
Alex Christensen
Reported 2024-09-26 16:08:07 PDT
Attachments
Alex Christensen
Comment 1 2024-09-26 16:10:28 PDT
EWS
Comment 2 2024-09-26 21:47:13 PDT
Committed 284334@main (1db982b7c00f): <https://commits.webkit.org/284334@main> Reviewed commits have been landed. Closing PR #34330 and removing active labels.
EWS
Comment 3 2024-09-27 11:33:53 PDT
Committed 283286.145@safari-7620-branch (8c04a600423b): <https://commits.webkit.org/283286.145@safari-7620-branch> Reviewed commits have been landed. Closing PR #1920 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.