Cherry-pick 1db982b7c00f. rdar://136779806

Fix infinite loops when parsing invalid CSP header fields after 273894@main
    https://bugs.webkit.org/show_bug.cgi?id=280442
    rdar://136779806

    Reviewed by Brent Fulgham.

    If we find an invalid value, report it and return instead of reporting it over and over
    again in an infinite loop until we run out of memory from too many reports.

    * Source/WebCore/page/csp/ContentSecurityPolicyDirectiveList.cpp:
    (WebCore::ContentSecurityPolicyDirectiveList::parseRequireTrustedTypesFor):
    * Source/WebCore/page/csp/ContentSecurityPolicyTrustedTypesDirective.cpp:
    (WebCore::ContentSecurityPolicyTrustedTypesDirective::parse):
    * Tools/TestWebKitAPI/Tests/WebKitCocoa/ContentSecurityPolicy.mm:
    (TEST(ContentSecurityPolicy, InvalidRequireTrustedTypesFor)):

    Canonical link: https://commits.webkit.org/284334@main